--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #dfdfdf;
-
+  margin: 0;
+  padding: 0;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -22,6 +22,18 @@
 }
 .mr-1{
   margin-right: 7.5px !important;
+}
+.mt-2{
+  margin-top: 10px !important;
+}
+.mb-2{
+  margin-bottom: 10px !important;
+}
+.ml-2{
+  margin-left: 10px !important;
+}
+.mr-2{
+  margin-right: 10px !important;
 }
 .w-full{
   width: 100%;
@@ -46,6 +58,12 @@
   justify-content: space-between;
   color: #000;
   text-align: center;
+}
+.title-main{
+  color: #000;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold
 }
 .content-header-data{
   text-align: center;
@@ -91,8 +109,57 @@
 .candidate-container{
   height: 120px;
   width: 120px;
-  background: rebeccapurple;
   margin: 5px;
   border: 3px solid #000;
   border-radius: 5px;
+  position: relative; 
+  display: inline-block; 
+}
+.candidate-aspa {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2; 
+  height: 100%;
+}
+
+.candidate-img {
+  position: relative; 
+  z-index: 1; 
+}
+.card-candidate:hover{
+  background: #87ee875d;
+  cursor: pointer;
+  color: #000000cc;
+  border: 3px solid #508b505d;
+}
+.card-candidate-select{
+  background: #87ee875d;
+  color: #000000cc;
+  border: 3px solid #508b505d;
+}
+.card-candidate{
+  border: 3px solid#ffff;
+}
+.card-main{
+  min-height: 70vh;
+  height: 100vh;
+  max-height: 100vh ;
+  width: 55%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url('./assets/imgs/8565-1.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  margin: 0 auto;
+}
+.candidate-img-registered{
+  height: 55px;
+  width: 55px;
+  border: 1px solid #706f6f;
+  border-radius: 5px;
+  overflow: hidden;
 }
